--- a/src/components/WrapTable/style.scss
+++ b/src/components/WrapTable/style.scss
@@ -47,6 +47,11 @@
     background-color: $white;
     padding: 0 1.4rem 0 1.7rem;
     height: 3rem;
+    flex-wrap: nowrap;
+
+    .dateToday {
+      margin-left: 0.1rem;
+    }
 
     &:nth-child(1) {
       font-size: $sizer;
@@ -54,6 +59,7 @@
 
     .wrap__call {
       width: 40%;
+      margin: 0 2px;
 
       img {
         object-fit: cover;
@@ -79,7 +85,7 @@
     .balance {
       display: flex;
       justify-content: flex-end;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
       align-items: center;
       max-height: 4rem;
       padding: 0 1rem;
@@ -144,5 +150,38 @@
     padding: 1rem 1.5rem 0;
     border-radius: 0.2rem;
     width: 100%;
+  }
+}
+
+@media all and (max-width: 992px) {
+  .header {
+    .dateToday {
+      font-size: 0.5rem;
+    }
+
+    .user p {
+      font-size: 0.5rem;
+    }
+
+    .avatar {
+      img {
+        width: 50%;
+        object-fit: cover;
+      }
+    }
+  }
+
+  .wrapper__content {
+    .balance {
+      .form__select-date {
+        font-size: 0.5rem;
+      }
+    }
+
+    .filter {
+      .search__call p {
+        font-size: 0.5rem;
+      }
+    }
   }
 }
