--- a/src/components/table/style.scss
+++ b/src/components/table/style.scss
@@ -56,6 +56,8 @@
     tbody {
       tr {
         cursor: pointer;
+        max-height: 2rem;
+        overflow-y: hidden;
 
         th,
         td {
